# otterbot

./: .gitignore  CLAUDE.md  README.md  REFACTORING_SUMMARY.md  bggapi.py  pyproject.toml
api/: render.py  server.py
api/static/css/: styles.css
api/templates/: game_files.html
app/: api.py  app.py  otterrouter.py  schemas.py  tools.py  utils.py  webapp.py
app/datasources/: faiss_ds.py  ingest.py
app/db/: __init__.py  sqlite_db.py
app/llms/: openai.py  prompt.py
app/pages/: account_page.py  base_page.py  generation_page.py  model_page.py  security_page.py  start_page.py  topup_page.py
bot/: main.py  otterrouter.py  tools.py  utils.py  webapp.py
bot/datasources/: ingest.py
bot/db/: __init__.py  sqlite_db.py
bot/llms/: openai.py  prompt.py
scripts/: start.sh
storage/games/catan/: catan.html  catan.txt
