[tool.poetry]
name = "otterbot"
version = "0.1.1"
description = "Telegram Boardgame Assistant Bot"
authors = ["Reagan <rrr.chanhiulok@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
faiss-cpu = "^1.13.0"
python-telegram-bot = "^21.11.1"
pydantic = "^2.10.6"
openai = "^1.65.2"
python-dotenv = "^1.1.0"
beautifulsoup4 = {extras = ["lxml"], version = "^4.13.5"}
fastapi = "^0.117.1"
lxml = "^6.0.2"
youtube-transcript-api = "^0.6.2"
bgg-api = "^1.1.14"
google-auth-oauthlib = "^1.2.3"
google-auth-httplib2 = "^0.2.1"
google-api-python-client = "^2.187.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
